Fixed collapse

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,10 @@
     color: #f8f8ee;
 }
 
+.navbar-toggler {
+    background-color: #f8f8ee;
+}
+
 
  
   
